# mdtodocx_edu

./: .gitignore  .luarc.json  README.md  entry.py  mdtodocx.spec  pyproject.toml  ref.docx
filters/: academic.lua
src/mdtodocx/: __init__.py  __main__.py  config.py  converter.py  main.py  postprocess.py  xml_utils.py
usage/: README.md  test.docx  test.md
