[project]
name = "mdtodocx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1.0",
    "pandoc>=2.4",
    "pyinstaller>=6.20.0",
    "pypandoc>=1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdtodocx"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
